tests/baselines/reference/interfacedeclWithPredicatesError1.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError1.ts(5,9): error TS1005: 'Call expression' expected.


==== tests/cases/compiler/interfacedeclWithPredicatesError1.ts (1 errors) ====
    interface UsersShow{
        user_id?: number;
        screen_name?: string;
        text: string;
    } with {
            
        5;
    ~~~~~
!!! error TS1005: 'Call expression' expected.
    }